display random pokemon of each area

--- a/lated/src/App.css
+++ b/lated/src/App.css
@@ -37,5 +37,25 @@ body {
   left: 0;   
 }
 
+.custom-cardcontainer{
+  overflow: auto;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;   
+}
+.card{
+  margin-left: 30px;
+  font-weight: bold;
+  max-width: 230px;
+  border: 10px solid rgb(9, 76, 3);
+  border-radius: 50px;
+  width: 100%;
+  background-color: rgb(240, 222, 121);
+}
+h4 {
+  color: red;
+}
 
 
