--- a/lated/src/App.css
+++ b/lated/src/App.css
@@ -11,12 +11,12 @@ body {
  
 }
 .custom-button {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   transition: transform 0.2s;
   margin: 5px;
-  background-image: url('https://upload.wikimedia.org/wikipedia/hu/f/fd/Pikachu_thunderbolt.jpg');
-  background-size: cover;
+  background-image: url('https://i.ebayimg.com/images/g/0p4AAOSw6wNkXU4a/s-l1200.webp');
+  background-size: 100%;
   background-repeat: no-repeat; 
   border: none; 
   font-size: 15px;
@@ -58,4 +58,15 @@ h4 {
   color: red;
 }
 
-
+.backbtn{
+  width: 40px;
+  height: 40px;
+  transition: transform 0.2s;
+  margin: 5px;
+  background-image: url('https://cdn-icons-png.flaticon.com/512/60/60577.png');
+  background-size: 100%;
+  background-repeat: no-repeat; 
+  border: none; 
+  font-size: 15px;
+  cursor: pointer; /* Mutató kurzor beállítása */
+}
